2007-03-17 Lluis Sanchez Gual  <lluis@novell.com> 

	* configure.in: Added galician translation.

2007-03-07 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* configure.in: Error out if check for "zip" fails.
	  Remove ENABLE_DESIGNERSUPP check as it should always be built now.

2007-02-16 Lluis Sanchez Gual  <lluis@novell.com> 

	* configure.in: Changed version to 0.13. Removed NUnit dependency.

2007-02-08 Lluis Sanchez Gual  <lluis@novell.com> 

	* Makefile.include: Added new var for resource files.

2007-01-23 Lluis Sanchez Gual  <lluis@novell.com> 

	* configure.in: Make sure all files are built using utf8. Should
	  fix bug #80010.

2006-12-01 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* configure.in: Fixed $enable_subversion typo.

2006-11-28 Andrés G. Aragoneses  <knocte@gmail.com>

	* configure.in: Added a fallback search for MOZILLA_HOME, that is in 
	  sync with the one in monodevelop.in. Reviewed and cleaned up by 
	  Michael Hutchinson <m.j.hutchinson@gmail.com>.
	
	* monodevelop.in: Added a new way to detect MOZILLA_HOME, and improved 
	  the existing ones. Incorporates patch by Mike Morano 
	  <mmorano@mikeandwan.us>.
	
	* Makefile.am: Set MOZILLA_FIVE_HOME for the "make run" command.

2006-11-28 Gideon de Swardt <gdeswardt@gmail.com>

	* configure.in: Added the WebReference AddIn.

2006-11-23 Lluis Sanchez Gual  <lluis@novell.com> 

	* configure.in: Enable version control by default. Added new
	  option for Subversion support.

2006-11-20  Ankit Jain  <jankit@novell.com>

	* Makefile.am: Change the build order of addins to build VBNetBinding
	before prj2make-sharp-lib.

2006-09-28 Matej Urbas <matej.urbas@gmail.com>

	* Extras/Extras.mds: Added Extras/MonoDevelop.Autotools to the
	  solution.

2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* Extras/Extras.mds: Updated.

2006-09-19 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.mds: Updated.
	* .: Added svn:ignore for MonoDevelop.userprefs.
